[package]
name = "vg"
version = "0.2.0"
edition = "2026"
description = "Protect API secrets during VibeCoding — env injection, local proxy, log masking"
license = "MIT"
repository = "https://github.com/jjjkkkjjj/vibeguardian"
keywords = ["secrets", "proxy", "devtools", "security"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "vg"
path = "src/main.rs"

[lib]
name = "vg"
path = "src/lib.rs"

# ── Distribution (cargo-dist) ──────────────────────────────────────────────
[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = "github"
installers = ["shell", "powershell"]
targets = [
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"

[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.deb]
maintainer = "jjjkkkjjj <jjjkkkjjj@users.noreply.github.com>"
section = "utils"
depends = "$auto"
assets = [
  ["target/release/vs", "usr/local/bin/", "755"],
]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP proxy
axum = "0.8"
reqwest = { version = "0.13", features = ["stream"] }
http = "1"

# Log masking
aho-corasick = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Utilities
anyhow = "1"
rpassword = "7"
dirs = "5"
tokio-util = { version = "0.7", features = ["io"] }
